--- a/detalje.html
+++ b/detalje.html
@@ -11,30 +11,41 @@
         }
 
         header {
-            background-color: #FCE688;
-            height: 15vw;
+            background-color: #292929;
+            -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            min-height: 5vw;
+            grid-area: header;
+
         }
 
         footer {
-            height: 30vw;
             width: 100%;
-            background-color: #404040;
+            background-color: #FCE688;
+            grid-area: footer;
         }
 
         .skoene {
+            grid-area: sko;
             display: flex;
-            flex-direction: row;
-            margin: 0vw 7vw;
-        }
-
-        .image {
-            flex-basis: 300px;
-            flex-grow: 1;
+            flex-wrap: wrap;
+            margin: 7vw;
+            margin-top: 0;
         }
 
         .txt {
-            flex-basis: 300px;
+            padding-top: 7vw;
+            grid-area: text;
+            padding-right: 50px;
             flex-grow: 1;
+            flex-basis: 300px;
+
+        }
+
+        .image {
+            flex-grow: 1;
+            flex-basis: 600px;
         }
 
         img {
@@ -49,8 +60,20 @@
             background-color: #404040;
             color: #ffffff;
             font-size: 1em;
+            -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
         }
+
+        /*
+        #buttons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+
+        }
+*/
 
         button.watch {
             text-align: center;
@@ -60,6 +83,9 @@
             background-color: #FDC1C6;
             color: #000000;
             font-size: 1em;
+            -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
         }
 
@@ -77,19 +103,48 @@
 
         }
 
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        .logo {
+            height: 3vw;
+            width: auto;
+            padding-left: 10vw;
+            margin-top: 1vw;
+        }
+
+
+        #detalje {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas:
+                "header header"
+                "sko sko"
+                "footer footer"
+
+        }
     </style>
 </head>
 
 <body>
+
     <header>
+        <a href="index.html">
+            <img class="logo" src="img/scoohlogo.png">
+        </a>
     </header>
+
     <section id="detalje">
 
         <article class="skoene">
 
 
             <div class="image">
-                <img src="" alt="">
+                <img src="img/birkenstock.png" alt="">
             </div>
             <div class="txt">
                 <button class="luk">〱</button>
@@ -97,11 +152,15 @@
 
                 <p id="type"></p>
                 <p id="pris"></p>
+
                 <button class="order">order</button>
                 <button class="watch">watch</button>
+
             </div>
         </article>
-        <footer></footer>
+        <footer>
+            <p>hej</p>
+        </footer>
     </section>
 
 
@@ -136,14 +195,11 @@
 
                     document.querySelector("h2").textContent = sko.gsx$navn.$t;
                     document.querySelector("#type").textContent = sko.gsx$lang.$t;
-                    document.querySelector("img").src = "img/" + sko.gsx$billede.$t + ".png";
+                    document.querySelector("image").src = "img/" + sko.gsx$billede.$t + ".png";
                     document.querySelector("#pris").textContent = "Pris: " + sko.gsx$pris.$t + ",-";
 
                 }
             })
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
