--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
     <title></title>
     <style>
         img {
@@ -17,9 +19,12 @@
         }
 
         .header {
-            background-color: #FCE688;
-            grid-area: header;
+            background-color: #292929;
+            -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
             min-height: 5vw;
+            grid-area: header;
             /*            background-image: linear-gradient(#FCE688, white);*/
         }
 
@@ -48,10 +53,14 @@
 
         nav {
             grid-area: nav;
-            background-color: #404040;
+            background-color: #ffffff;
             display: flex;
             justify-content: center;
             height: 5vw;
+            -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+            box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+
 
 
         }
@@ -76,22 +85,28 @@
         .filterknap {
 
 
-            font-size: 1em;
+            font-size: 1.5em;
             border: none;
-            background-color: #404040;
-            color: white;
+            background-color: #ffffff;
+            color: #2a2a2a;
             padding-left: 10vw;
+            font-family: 'Lato', sans-serif;
 
 
 
         }
 
+        .skoene {
+            border: solid 0.1em;
+        }
+
         .valgt {
 
-            font-size: 1em;
+            font-size: 1.5em;
             border: none;
-            background-color: #404040;
-            color: white;
+            background-color: #ffffff;
+            color: #2a2a2a;
+            font-family: 'Lato', sans-serif;
 
 
         }
@@ -107,6 +122,13 @@
 
 */
 
+        h2 {
+            font-family: 'Lato', sans-serif;
+            padding: 25px;
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+
         h3 {
             grid-area: kategorier;
             padding-left: 15vw;
@@ -120,6 +142,8 @@
 
         }
 
+
+
         #liste {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
@@ -129,6 +153,8 @@
             margin-right: 10vw;
             margin-top: 3vw;
         }
+
+
 
         h3 {
             grid-area: kategorier;
@@ -156,6 +182,13 @@
                 margin-right: 20vw;
             }
         }
+
+        p {
+            font-family: 'Source Sans Pro', sans-serif;
+            padding: 25px;
+            padding-top: 0;
+            padding-bottom: 0;
+        }
     </style>
 </head>
 
@@ -170,10 +203,10 @@
             </video>
         </div>
         <nav>
-            <button class="valgt" data-kategori="alle">All</button>
-            <button class="filterknap" data-kategori="chill">Chill</button>
-            <button class="filterknap" data-kategori="girly">Girly</button>
-            <button class="filterknap" data-kategori="work">Work</button>
+            <button class="valgt" data-kategori="alle">ALL</button>
+            <button class="filterknap" data-kategori="chill">CHILL</button>
+            <button class="filterknap" data-kategori="girly">GIRLY</button>
+            <button class="filterknap" data-kategori="work">WORK</button>
         </nav>
         <div class="indhold">
             <section id="liste"></section>
